--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,17 +18,16 @@
 #          user-info-uri: https://gitlab.com/api/v4/user
 #          jwk-set-uri: https://lab.ssafy.com/oauth/discovery/keys
 
-# mybatis ¸ÅÇÎ typeÀ» Âª°Ô ¾²±â À§ÇÑ ¼³Á¤
-mybatis.type-aliases-package=com.ssafyns.blind.model
-mybatis.config=mybatis-config.xml
-
-# mapper ÀÌÇÏ¸¦ ·Î±ë À§Ä¡·Î ¼³Á¤.
+# mybatis ï¿½ï¿½ï¿½ï¿½ typeï¿½ï¿½ Âªï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½
+mybatis.type-aliases-package=com.ssafyns.blind.vo
+mybatis.mapper-locations=classpath*:mapper/*.xml
+# mapper ï¿½ï¿½ï¿½Ï¸ï¿½ ï¿½Î±ï¿½ ï¿½ï¿½Ä¡ï¿½ï¿½ ï¿½ï¿½ï¿½ï¿½.
 logging.level.com.ssafyns.blind.mapper=TRACE
 
-spring.datasource.url=jdbc:mysql://13.124.71.81:3306/blind
-spring.datasource.username=root
-spring.datasource.password=blind
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://13.124.71.81:3306/ssafyns
+#spring.datasource.username=root
+#spring.datasource.password=blind
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring:
 #  datasource:
