--- a/vuejs-bbs-front/package.json
+++ b/vuejs-bbs-front/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "crypto": "^1.0.1",
     "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "query-string": "^6.2.0",
