--- a/vuejs-bbs-front/package.json
+++ b/vuejs-bbs-front/package.json
@@ -8,32 +8,32 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "^0.18.1",
     "crypto": "^1.0.1",
-    "jsonwebtoken": "^8.4.0",
-    "lodash": "^4.17.11",
-    "query-string": "^6.2.0",
-    "quill": "^1.3.6",
-    "vue": "^2.5.17",
-    "vue-notification": "^1.3.13",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "query-string": "^6.8.3",
+    "quill": "^1.3.7",
+    "vue": "^2.6.10",
+    "vue-notification": "^1.3.19",
     "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.0.1",
-    "vue-scrollto": "^2.13.0",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.1.3",
+    "vue-scrollto": "^2.17.1",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-plugin-eslint": "^3.0.3",
-    "@vue/cli-plugin-unit-jest": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "@vue/eslint-config-airbnb": "^4.0.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
+    "@vue/cli-plugin-babel": "^3.12.1",
+    "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-unit-jest": "^3.12.1",
+    "@vue/cli-service": "^3.12.1",
+    "@vue/eslint-config-airbnb": "^4.0.1",
+    "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
+    "babel-eslint": "^10.0.3",
     "babel-jest": "^23.6.0",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0-0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^5.2.3",
     "prettier-eslint": "^8.8.2",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.6.10"
   }
 }
